# Waggle-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codex_config.example.toml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  smithery.yaml
.playwright-mcp/: page-2026-04-29T14-38-52-888Z.yml  page-2026-05-01T03-58-44-819Z.yml  page-2026-05-01T04-01-02-511Z.yml  page-2026-05-01T04-01-17-068Z.yml  page-2026-05-01T04-01-36-670Z.yml  page-2026-05-01T04-02-09-294Z.yml
benchmark_results/: ablation_results.csv  ablation_results.json  ablation_results.md  ablation_results_partial.csv  answer_level_results.csv  answer_level_results.json  answer_level_results.md  budget_scaling_results.csv  budget_scaling_results.json  budget_scaling_results.md  failure_analysis.md
dist-release/: waggle_mcp-0.1.13-py3-none-any.whl  waggle_mcp-0.1.14-py3-none-any.whl
docs/: abhi-format-v2.md  automatic-memory-rules.md  context-handoff-dogfood.md  evaluation-plan.md  longmemeval-methodology.md  reference.md
graph-ui/: README.md
scripts/: benchmark_extraction.py  benchmark_longmemeval.py  check_distribution.py  check_label_refs.py  demo_recording_flow.py  smoke_test_mcp.py  sync_github_labels.py
tests/: test_auth.py  test_benchmark_harness.py  test_comms_utils.py  test_config.py  test_distribution_cli.py  test_drive_sync.py  test_edges.py  test_embed_event_loop_stall.py  test_embedding_checksum.py  test_embeddings.py  test_graph.py  test_hybrid_retrieval.py  test_ingest_transcript_handoff.py  test_label_drift.py  (+8 more)
(+96 files in other folders)
