[project]
name = "graph-memory-mcp"
version = "0.1.0"
description = "MCP server that gives LLMs persistent graph-structured memory"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Abhigyan Shekhar" }
]
keywords = ["mcp", "knowledge-graph", "memory", "llm", "context"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "anyio>=4.4.0",
  "mcp>=1.0.0",
  "networkx>=3.2.1",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "python-louvain>=0.16",
  "pyvis>=0.3.2",
  "sentence-transformers>=2.6.0",
  "starlette>=0.37.2",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]
neo4j = [
  "neo4j>=5.20.0",
]

[project.scripts]
graph-memory-mcp = "graph_memory.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/graph_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
